@@ -1,3 +1,8 @@
+2002-03-30  Jody Goldberg <jody@gnome.org>
+
+	* mime-edit-dialog.c (populate_component_list) : add some protection
+	  for when there is no default.
+
 2002-03-30  Lauris Kaplinski  <lauris@ximian.com>
 
 	* service-info.c: Added ghelp
